# pix4d-qt-basemap-plugin

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  conanfile.py  requirements.txt
ci/pipelines/: qtbasemapplugin-template.yml
ci/settings/: feature-branch.yml  master-branch.yml
res/: mapbox.qrc
src/: GeoFileTileCache.cpp  GeoFileTileCache.h  GeoMapReply.cpp  GeoMapReply.h  GeoServiceProviderPlugin.cpp  GeoServiceProviderPlugin.h  GeoTileFetcher.cpp  GeoTileFetcher.h  GeoTiledMappingManagerEngine.cpp  GeoTiledMappingManagerEngine.h  basemap_plugin.json  qgeocodereplymapbox.cpp  qgeocodereplymapbox.h  qgeocodingmanagerenginemapbox.cpp  qgeocodingmanagerenginemapbox.h  qgeofiletilecachemapbox.cpp  qgeofiletilecachemapbox.h  qgeomapreplymapbox.cpp  qgeomapreplymapbox.h  qgeoserviceproviderpluginmapbox.cpp  qgeoserviceproviderpluginmapbox.h  qgeotiledmappingmanagerenginemapbox.cpp  qgeotiledmappingmanagerenginemapbox.h  qgeotilefetchermapbox.cpp  qgeotilefetchermapbox.h
src/BasemapHelpers/: CMakeLists.txt
src/BasemapHelpers/src/: QQuickGeoMapGestureArea.cpp
src/QtBasemapHelpers/: CMakeLists.txt
src/QtBasemapHelpers/include/QtBasemapHelpers/: QQuickGeoMapGestureArea.h
src/QtBasemapHelpers/src/: QQuickGeoMapGestureArea.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
